--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start-dev": "webpack serve --open --mode development",
-		"build-prod": "webpack"
+		"build": "webpack"
 	},
 	"author": "Pietro Guiotto",
 	"license": "MIT",
@@ -28,4 +28,3 @@
 		"webpack-dev-server": "4.11.1"
 	}
 }
-
